{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 47,
  "lineage": "7e514300-e427-16e0-2f78-cebf0b890b55",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a7db628f1e55fde8",
            "arn": "arn:aws:ec2:ap-south-1:992382739086:elastic-ip/eipalloc-0a7db628f1e55fde8",
            "association_id": "eipassoc-0bec6d0b78657ba61",
            "domain": "vpc",
            "id": "eipalloc-0a7db628f1e55fde8",
            "instance": "i-07cbb28dd4a8c4d2f",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-007807e064a0ac8e6",
            "private_dns": "ip-10-0-1-84.ap-south-1.compute.internal",
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-65-1-251-65.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.251.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cicd-dashboard-eip"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-eip",
              "Project": "cicd-health-dashboard"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.main",
            "aws_internet_gateway.main",
            "aws_key_pair.main",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d4cbf33677f7d3c5",
            "arn": "arn:aws:ec2:ap-south-1:992382739086:instance/i-07cbb28dd4a8c4d2f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cbb28dd4a8c4d2f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "cicd-dashboard-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-007807e064a0ac8e6",
            "private_dns": "ip-10-0-1-84.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "public_dns": "ec2-13-232-86-97.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.86.97",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:992382739086:key/ee3640fe-314b-4503-b6ad-72da66f992b2",
                "tags": {
                  "Name": "cicd-dashboard-root-volume"
                },
                "tags_all": {
                  "CreatedBy": "ai-assisted",
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Name": "cicd-dashboard-root-volume",
                  "Project": "cicd-health-dashboard"
                },
                "throughput": 125,
                "volume_id": "vol-0104cb7c2a2d64d02",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0653ffa0802a1e05c",
            "tags": {
              "Name": "cicd-dashboard-instance"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-instance",
              "Project": "cicd-health-dashboard"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f8b44050749083af"
            ]
          },
          "dependencies": [
            "aws_key_pair.main",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382739086:internet-gateway/igw-0f659da504cc25bf9",
            "id": "igw-0f659da504cc25bf9",
            "owner_id": "992382739086",
            "tags": {
              "Name": "cicd-dashboard-igw"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-igw",
              "Project": "cicd-health-dashboard"
            },
            "vpc_id": "vpc-0d4b887f95f5353cc"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382739086:route-table/rtb-0100c6cf337cda2c2",
            "id": "rtb-0100c6cf337cda2c2",
            "owner_id": "992382739086",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f659da504cc25bf9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cicd-dashboard-public-rt"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-rt",
              "Project": "cicd-health-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4b887f95f5353cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9a07788d13ab2f2",
            "route_table_id": "rtb-0100c6cf337cda2c2",
            "subnet_id": "subnet-0653ffa0802a1e05c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033e73728e22f2e4e",
            "route_table_id": "rtb-0100c6cf337cda2c2",
            "subnet_id": "subnet-0547261d1c1839949"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382739086:security-group/sg-0f8b44050749083af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f8b44050749083af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Dashboard frontend",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cicd-dashboard-ec2-20250918131225751900000001",
            "name_prefix": "cicd-dashboard-ec2-",
            "owner_id": "992382739086",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cicd-dashboard-ec2-sg"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-ec2-sg",
              "Project": "cicd-health-dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d4b887f95f5353cc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382739086:subnet/subnet-041ed922b48dbcd86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041ed922b48dbcd86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382739086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-dashboard-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-private-subnet-1",
              "Project": "cicd-health-dashboard",
              "Type": "private"
            },
            "vpc_id": "vpc-0d4b887f95f5353cc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382739086:subnet/subnet-05c00170001795b5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c00170001795b5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382739086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-dashboard-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-private-subnet-2",
              "Project": "cicd-health-dashboard",
              "Type": "private"
            },
            "vpc_id": "vpc-0d4b887f95f5353cc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382739086:subnet/subnet-0653ffa0802a1e05c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0653ffa0802a1e05c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382739086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-dashboard-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-subnet-1",
              "Project": "cicd-health-dashboard",
              "Type": "public"
            },
            "vpc_id": "vpc-0d4b887f95f5353cc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382739086:subnet/subnet-0547261d1c1839949",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0547261d1c1839949",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382739086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cicd-dashboard-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-public-subnet-2",
              "Project": "cicd-health-dashboard",
              "Type": "public"
            },
            "vpc_id": "vpc-0d4b887f95f5353cc"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382739086:vpc/vpc-0d4b887f95f5353cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00b2603646e92e90f",
            "default_route_table_id": "rtb-0ba4e8da07fcf277f",
            "default_security_group_id": "sg-0f42f248f47edd936",
            "dhcp_options_id": "dopt-0c8fe87522f708c7a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4b887f95f5353cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba4e8da07fcf277f",
            "owner_id": "992382739086",
            "tags": {
              "Name": "cicd-dashboard-vpc"
            },
            "tags_all": {
              "CreatedBy": "ai-assisted",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cicd-dashboard-vpc",
              "Project": "cicd-health-dashboard"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}